--- a/index.html
+++ b/index.html
@@ -1186,38 +1186,21 @@
         "002": "waxaad u baahan tahay inaad sii kobciso maadooyinka Bayoolijiga, Juqraafiga iyo kuwa luuqadaha.",
         "003": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
         "3531894": "Hambalyo! Waxaad ku guuleysatay inaad noqoto ardeyadda kaalinta 1aad kaga jirta fasalka iyo ardeyadda 1aad ee ugu sarreysa dhammaan natiijada ardeyda kale ee dugsiga sare. 🎉 Horumar wanaagsan!",
-        "67": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "78": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "11": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "36": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "5": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "47": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "109": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "119": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "122": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "68": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "89": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "142": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "49": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "80": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "84": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "23": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "110": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "50": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
-        "59": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "32": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "36": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "69": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "71": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "100": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "38": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "63": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "133": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "96": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "91": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "6": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "135": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
-        "108": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
+        "f704": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f7013": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f701": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f609": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f6010": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f6011": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f504": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f503": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f502": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f301": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f303": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f304": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f201": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 1aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f203": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 2aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
+        "f205": "Hambalyo! Waxaad muujisay karti iyo dedaal aad u wanaagsan. Waxaad ku guulaysatay inaad kaalinta 3aad u gasho fasalkaaga. Horumar wanaagsan! 🎉🎉",
         "116": "waan ka xumahay si aad u hesho ama aad u aragto natiijadaada imtixaanka, fadlan iska xali xafiiska maaliyadda dugsiga.",
     }; 
     const students = [
