--- a/index.html
+++ b/index.html
@@ -956,10 +956,7 @@
         id="regInput" 
         class="input-field" 
         placeholder="geli lambarkaaga tira-taxanaha (tusaale: 001)"
-        aria-label="Geli lambarkaaga tira-taxanaha"
-        pattern="[0-9]*" 
-        inputmode="numeric"
-      >
+        aria-label="Geli lambarkaaga tira-taxanaha"      >
       <button class="submit-btn" onclick="showResult()">
         <i class="fas fa-search"></i> U Gudub Aragtida Natiijadaada
       </button>
