--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
   <div class="container">
     <!-- Modern Header Section -->
     <div class="header-section">
-    <img src="https://scontent.fmgq2-1.fna.fbcdn.net/v/t39.30808-6/502621245_122163767648465364_8181462959337347025_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=EeD_RW6exOkQ7kNvwHuM0eU&_nc_oc=AdngzxQmmZITrTTqhJIGUH0j1ejxh9p-VUZ4P_4MVki59FLGrXSVOcGhrzyxIhOigBE&_nc_zt=23&_nc_ht=scontent.fmgq2-1.fna&_nc_gid=RPrQeUOmFi0hHZLfqd7zeA&oh=00_AfX1YYR0VtldzAys7FoBbyLm04FOE2rdZYWiqJ-1WctKWA&oe=68B5107C" alt="Midnimo School Logo" width="200"> </h1>
+<img src="https://i.ibb.co/ZRZrbbfy/Midnimo-School-Logo.jpg" alt="Midnimo-School-Logo" alt="Midnimo School Logo" width="200"> </h1>
       <h1 class="school-name">DUGSIGA HOOSE, DHEXE IYO SARE EE MIDNIMO</h1>
       <h2 class="exam-title">NATIIJADA IMTIXAANKA NAKHLIGA</h2>
       <div class="academic-year">SANAD DUGSIYEEDKA 2024-2025</div>
